test_scores/negative_dimers/features/O94887.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O94887.pkl.xz